# gif-generator

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  panels.h  pch.h  selection_panel.cpp  window.cpp  window.h
