cmake_minimum_required(VERSION 3.16)
include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/vendor/glfw/include" "${CMAKE_BUILD_DIR}/vendor/glad/include" "${CMAKE_SOURCE_DIR}/vendor/glm" "${CMAKE_SOURCE_DIR}/vendor/gif-h" "${CMAKE_SOURCE_DIR}/vendor/imgui" "${CMAKE_SOURCE_DIR}/vendor/json/include")
file(GLOB IMGUI_CPP_SOURCE "${CMAKE_SOURCE_DIR}/vendor/imgui/*.cpp")
file(GLOB IMGUI_H_HEADERS "${CMAKE_SOURCE_DIR}/vendor/imgui/*.h")
file(GLOB IMGUI_GL_BACKEND "${CMAKE_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_opengl3.*")
file(GLOB IMGUI_GLFW_BACKEND "${CMAKE_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_glfw.*")
file(GLOB IMGUI_STDLIB_SOURCE "${CMAKE_SOURCE_DIR}/vendor/imgui/misc/cpp/imgui_stdlib.*")
set(IMGUI_MANIFEST ${IMGUI_CPP_SOURCE} ${IMGUI_H_HEADERS} ${IMGUI_GL_BACKEND} ${IMGUI_GLFW_BACKEND} ${IMGUI_STDLIB_SOURCE})
add_library(imgui STATIC ${IMGUI_MANIFEST})
target_link_libraries(imgui glfw glad)
file(GLOB_RECURSE CPP_SOURCE "*.cpp")
file(GLOB_RECURSE H_HEADERS "*.h")
set(MANIFEST ${CPP_SOURCE} ${H_HEADERS})
add_executable(gif-generator ${MANIFEST})
target_link_libraries(gif-generator glfw glad imgui)
target_precompile_headers(gif-generator PRIVATE "pch.h")
set_property(TARGET gif-generator PROPERTY CXX_STANDARD 17)
